# swagger.json
@@ -30,7 +30,7 @@
         }
       }
     },
-    "/tasks/{taskId}": {
+    "/tasks/{userId}/{taskId}": {
       "get": {
         "tags": [
           "Tasks"
@@ -41,6 +41,12 @@
         ],
         "parameters": [
           {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "taskId",
             "in": "path",
             "required": true,
@@ -50,15 +56,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -108,8 +105,8 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -180,9 +177,6 @@
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -208,14 +202,14 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "20": {
+            "description": ""
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
